Closed Bug 1557970 Opened 5 years ago Closed 5 years ago

Place the fallback scroll metadata on the async zoom container (WebRender codepath)

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: botond, Assigned: kats)

References

Details

Attachments

(2 files)

In bug 1553045, we modified the non-Webrender codepath for setting fallback scroll metadata for the RCD-RSF to place the metadata on the async zoom container layer rather than the root layer.

We need to make a correponding change to the WebRender codepath.

Assigning to kats per his request.

Assignee: nobody → kats
Priority: -- → P3

I tried reproducing the assertion failure in bug 1553045 with WR enabled but could not. Most likely because IsAsyncZoomContainer isn't implemented on that code path. But the comment there is wrong now so I'll fix that too.

This makes the assertion failure from bug 1553045 reproduce with WR enabled.

Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/019f488e7e2d
Implement IsAsyncZoomContainer for the WR codepath. r=botond
https://hg.mozilla.org/integration/autoland/rev/f0bc3b97d02d
Put the root metadata on the zoom container if there is one, for the WR codepath. r=botond
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: