Bug 1557970 - Implement IsAsyncZoomContainer for the WR codepath. r=botond

This makes the assertion failure from bug 1553045 reproduce with WR enabled.

Differential Revision: https://phabricator.services.mozilla.com/D34625